--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
   "author": "MrG3P5",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ArugaZ/whatsapp-bot.git"
+    "url": "https://github.com/Rakha21/sap-wa2.git"
   },
   "bugs": {
-    "url": "https://github.com/ArugaZ/whatsapp-bot/issues"
+    "url": "https://github.com/Rakha21/sap-wa2/issues"
   },
-  "homepage": "https://github.com/ArugaZ/whatsapp-bot",
+  "homepage": "https://github.com/Rakha21/sap-wa2",
   "license": "ISC",
   "dependencies": {
     "@open-wa/wa-automate": "^3.0.15",
